Fix saving food

--- a/client/index.html
+++ b/client/index.html
@@ -54,7 +54,7 @@
     <md-tab label="Nowy">
         <form name="form"
               layout="column" layout-margin layout-padding
-              ng-submit="save();"
+              ng-submit="saveNewFood(newFood)"
               md-swipe-left="nextTab()" md-swipe-right="previousTab()">
             <md-input-container>
                 <label>Nazwa</label>
