--- a/client/index.html
+++ b/client/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-    <script src="../jspm_packages/system.js"></script>
-    <script src="../config.js"></script>
+    <link rel="stylesheet" href="app.css">
+
+    <script src="/jspm_packages/system.js"></script>
+    <script src="/config.js"></script>
     <script>
-        System.import('./client/main');
+        System.import('./main');
     </script>
 
-    <!--<link rel="stylesheet" href="../dist/app.css">-->
     <!--<script src="../dist/app.js"></script>-->
 </head>
 <body ng-controller="MainCtrl" style="display: none;">
